Add submissions class